<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.fragments.recipe.bottomsheet.RecipesBottomSheet">

        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:id="@+id/meal_type_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/meal_type"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <HorizontalScrollView
            android:id="@+id/mealTypeHorizontalView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/meal_type_txt">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/mealType_chipGroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:checkedChip="@id/main_course_chip"
                    app:selectionRequired="true"
                    app:singleLine="true"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/main_course_chip"
                        style="@style/CustomChips"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_course" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/side_dish_chip"
                        style="@style/CustomChips"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/side_dish" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/dish_chip"
                        style="@style/CustomChips"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dessert" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/appetizer_chip"
                        style="@style/CustomChips"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/appetizer" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/salad_chip"
                        style="@style/CustomChips"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/salad" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/bread_chip"
                        style="@style/CustomChips"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bread" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/breakfast_chip"
                        style="@style/CustomChips"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/breakfast" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/soup_chip"
                        style="@style/CustomChips"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/soup" />
                    <!-- new -->
                    <com.google.android.material.chip.Chip
                        android:id="@+id/beverage_chip"
                        style="@style/CustomChips"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/beverage" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/sauce_chip"
                        style="@style/CustomChips"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sauce" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/marinade_chip"
                        style="@style/CustomChips"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/marinade" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/fingerFood_chip"
                        style="@style/CustomChips"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/finger_food" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/drink_chip"
                        style="@style/CustomChips"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/drink" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/snack_chip"
                        style="@style/CustomChips"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/snack" />
                </com.google.android.material.chip.ChipGroup>

            </LinearLayout>

        </HorizontalScrollView>

        <TextView
            android:id="@+id/diet_type_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:text="@string/diet_type"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mealTypeHorizontalView" />

        <HorizontalScrollView
            android:id="@+id/dietTypeHorizontalView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/diet_type_txt">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/dietType_chipGroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:checkedChip="@id/gluten_free_chip"
                    app:selectionRequired="true"
                    app:singleLine="true"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/gluten_free_chip"
                        style="@style/CustomChips"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gluten_free" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/ketogenic_chip"
                        style="@style/CustomChips"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ketogenic" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/vegetarian_chip"
                        style="@style/CustomChips"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vegetarian" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/lactoVegetarian"
                        style="@style/CustomChips"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lacto_vegetarian" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/ovoVegetarian_chip"
                        android:layout_width="wrap_content"
                        style="@style/CustomChips"
                        android:layout_height="wrap_content"
                        android:text="@string/ovo_vegetarian" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/vegan_chip"
                        android:layout_width="wrap_content"
                        style="@style/CustomChips"
                        android:layout_height="wrap_content"
                        android:text="@string/vegan" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/pescetarian_chip"
                        android:layout_width="wrap_content"
                        style="@style/CustomChips"
                        android:layout_height="wrap_content"
                        android:text="@string/pescetarian" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/paleo_chip"
                        style="@style/CustomChips"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/paleo" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/primal_chip"
                        android:layout_width="wrap_content"
                        style="@style/CustomChips"
                        android:layout_height="wrap_content"
                        android:text="@string/primal" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/low_FODMAP_chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/CustomChips"
                        android:text="@string/low_fodmap" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/whole30_chip"
                        android:layout_width="wrap_content"
                        style="@style/CustomChips"
                        android:layout_height="wrap_content"
                        android:text="@string/whole30" />

                </com.google.android.material.chip.ChipGroup>

            </LinearLayout>

        </HorizontalScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/apply_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:text="@string/apply"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:backgroundTint="@color/purple_500"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dietTypeHorizontalView" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>